Removed reference to Team 13

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             </ul>
         </nav>
         
-        <h1>Team 13</h1>
-        <a href = "https://operce.net" class = "button" target="_blank">Draw Dojo</a>
+        <h1>Draw Dojo</h1>
+        <a href = "https://operce.net" class = "button" target="_blank">Go To DrawDojo</a>
     </header>
 
     <div id="about">
         <div class="textPanel">
            <h2>Who Are We?</h2>
-           <p>We are Team 13, a seven person group designing a social media platform for our Professional Development group project.</p>
-           <p>The team has been together, meeting regularly and working on 'Draw Dojo' since October of 2021.</p>
-           <p>We are all developers, with some of us taking on additional roles. you can learn more about each individual with the button below.</p>
+           <p>We are Draw Dojo, a seven person group designing a social media platform for our Professional Development group project.</p>
+           <p>The team has been together, meeting regularly and working on the 'Draw Dojo' platform since October of 2021.</p>
+           <p>We are all developers, with some of us taking on additional roles. You can learn more about each individual with the button below.</p>
            <a href = "#aboutUs" class = "button">About Us</a>
         </div>
         <div class="textPanel">
