removed all references to team 13

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </div>
 
     <footer id="footer">
-        Contact: example@example.com • Team 13 • <a href="https://operce.net" target="_blank">Draw Dojo</a>
+        Contact: example@example.com • <a href="https://operce.net" target="_blank">Draw Dojo</a>
     </footer>
 
 
