updated website for demo 2

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href = "#top">Home</a></li>
                 <li><a href = "#about">About</a></li>
-                <li><a href = "#aboutUs">Our Team</a></li>
+                <li><a href = "#ourTeam">Our Team</a></li>
                 <li><a href = "#footer">Contact</a></li>
             </ul>
         </nav>
@@ -31,13 +31,13 @@
            <p>We are Draw Dojo, a seven person group designing a social media platform for our Professional Development group project.</p>
            <p>The team has been together, meeting regularly and working on the 'Draw Dojo' platform since October of 2021.</p>
            <p>We are all developers, with some of us taking on additional roles. You can learn more about each individual with the button below.</p>
-           <a href = "#aboutUs" class = "button">About Us</a>
+           <a href = "#ourTeam" class = "button">Our Team</a>
         </div>
         <div class="textPanel">
             <h2>What do we do?</h2>
             <p>We are the team behind 'Draw Dojo'. We are working to create a social media platform that is both innovative and intuitive.</p>
             <p>Draw Dojo gives everyone the chance to be an artist and to create and share something beautiful.</p>
-            <p>The platform is still in development and will be demo'd in March 2022. Learn more with the button below.</p>
+            <p>The platform is in the late stages of development, being demoed in late March 2022. Learn more with the button below.</p>
             <a href = "#DrawDojo" class = "button">Draw Dojo</a>
          </div>
     </div>
@@ -66,7 +66,7 @@
         </p>
         <img src="res/profile.png" class="figure">
         <p class="half">
-            Theres also an activity feed, so your followers can keep up with what you've been working on and see who you've been collaborating with! Our focus with this
+            There is also an activity feed, so your followers can keep up with what you've been working on and see who you've been collaborating with! Our focus with this
             project is to let several people put their best features together to create something better than the sum of its parts.
         </p>
         
@@ -74,7 +74,7 @@
         <div class="divider"></div>
     </div>
 
-    <div class="descBox" id="aboutUs">
+    <div class="descBox" id="ourTeam">
         <h2>Our Team</h2>
         <h3>Yoav</h3>
         <p>Yoav is our Organisational Manager, he is in charge of making sure tasks are allocated fairly and completed in a timely manner. Communicating with
@@ -105,7 +105,7 @@
     </div>
 
     <footer id="footer">
-        Contact: example@example.com • <a href="https://operce.net" target="_blank">Draw Dojo</a>
+        Contact: <a href="mailto:louisbraidwood@gmail.com" target="_blank">louisbraidwood@gmail.com</a> • <a href="https://operce.net" target="_blank">Draw Dojo ©</a>
     </footer>
 
 
