--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     </div>
     
     <div class="descBox" id="DrawDojo">
-        <img src="res/logo.png" id="logo">
+        <a href = "https://operce.net" class = "button" target="_blank">
+            <img src="res/logo.png" id="logo"></a>
         <p>
             Draw Dojo is currently the only service we provide. It provides a platform for anyone to be a creator, an artist and an inspiration to others. 
             Centering on Digital Art, we offer a platform for both creation and uploading of art, providing a platform to anyone and everyone.
