fixed displaying of logo

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     
     <div class="descBox" id="DrawDojo">
-        <a href = "https://operce.net" class = "button" target="_blank">
+        <a href = "https://operce.net" target="_blank">
             <img src="res/logo.png" id="logo"></a>
         <p>
             Draw Dojo is currently the only service we provide. It provides a platform for anyone to be a creator, an artist and an inspiration to others. 
